# llvm-mos-test

./: .gitignore  Makefile  README.md  Tupfile  chr.s  color.h  cross-file.txt  justfile  main.c  meson.build
docs/: useful-links.md
font/: chr.c  chr.h  chr.s
hello-world/: main.c
sornas/nesdoug-10-game-loop/: main.c
sornas/nesdoug-6-sprites/: Alpha2.s  main.c  sprite_data.c  sprite_data.h
sornas/nesdoug-7-sprite-collisions/: Alpha3.s  main.c  sprite_data.c  sprite_data.h
sornas/nesdoug-8-bg-collisions/: background.c  background.h  box.c  box.h  collide.s  main.c  sprite_data.c
sornas/nesdoug-9-scrolling/: N0.h  N1.h  big_numbers.s  main.c
sornas/nesdoug-template/: font  main.c
sornas/sprite-test/: main.c  sprites.aseprite  sprites.chr  sprites.s
